force-app/main/default/objects/Relationship_Auto_Create__c/fields/Campaign_Types__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Types__c</fullName>
    <description>For Auto-Create Relationships based on Campaign Members, the list of Campaign types the automation applies to. This field will be blank for Auto-Create Relationships based on Contacts.</description>
    <inlineHelpText>For Auto-Create Relationships based on Campaign Members, the list of Campaign types the automation applies to. This field will be blank for Auto-Create Relationships based on Contacts.</inlineHelpText>
    <label>Campaign Types</label>
    <type>TextArea</type>
</CustomField>