force-app/main/default/objects/Relationship_Auto_Create__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The label of the lookup field that triggers the creation of this Relationship when the field value is updated.</description>
    <inlineHelpText>The label of the lookup field that triggers the creation of this Relationship when the field value is updated.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>