force-app/main/default/objects/Relationship_Auto_Create__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The API name of the object (either Contact or CampaignMember) that the custom lookup field is on.</description>
    <inlineHelpText>The API name of the object (either Contact or CampaignMember) that the custom lookup field is on.</inlineHelpText>
    <label>Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>